--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -1,82 +1,70 @@
-﻿@model IEnumerable<IvA.Models.ProjektPaketeModel>
+﻿@model ProjekteDetailModel
 
 @{ ViewData["Title"] = "Projektdetails"; }
 
 <h1>Übersicht über die Projektdetails</h1>
 
-<div>W
+<div>
+    W
     <h4>Projekte</h4>
-    <br />
+    <dl class="row">
+        <dt class="col-sm-2">
+            Name
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.Projektname
+        </dd>
+        <dt class="col-sm-2">
+            Projektowner
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.Projektersteller
+        </dd>
+        <dt class="col-sm-2">
+            Erstellt am
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.ErstelltAm
+        </dd>
+        <dt class="col-sm-2">
+            Beschreibung
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.Beschreibung
+        </dd>
+        <dt class="col-sm-2">
+            Deadline
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.Deadline
+        </dd>
+        <dt class="col-sm-2">
+            Status
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Project.Status
+        </dd>
+    </dl>
 
-    @foreach (var item in Model.Take(1))
-    {
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Projektname)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Projektname)
-            </dd>
-            <dt class="col-sm-2">
-                Projektowner
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Projektersteller)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.ErstelltAm)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.ErstelltAm)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Mitglieder)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Mitglieder)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Beschreibung)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Beschreibung)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Deadline)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Deadline)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Status)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => item.Projekte.Status)
-            </dd>
-        </dl>
-
-        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Projekte.ProjekteId">Anpassen</a>
-        <a class="btn btn-primary" asp-action="ProjectUserList" asp-route-id="@item.Projekte.ProjekteId">Mitglieder</a>
-        <a class="btn btn-primary" asp-action="Index">Zurück zur Projektübersicht</a>
-        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Projekte.ProjekteId">Projekt löschen</a>
-        <button onclick="ShowError("a","b")">Click me</button>
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Project.ProjekteId">Anpassen</a>
+        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Project.ProjekteId">Projekt löschen</a>
         <div>
             <br />
-            <a class="btn btn-primary" asp-action="PaketErstellen" asp-route-id="@item.Projekte.ProjekteId">Arbeitspaket erstellen</a>
+            <a class="btn btn-primary" asp-action="PaketErstellen" asp-route-id="@Model.Project.ProjekteId">Arbeitspaket erstellen</a>
             <br />
-        </div>}
+        </div>
 </div>
 <div class="card-deck">
     <div class="card bg-secondary">
         <div class="card-body">
             <h4 class="card-title">To Do</h4>
             <ul class="list-group list-group-flush">
-                @foreach (var item in Model)
+                @foreach (var item in Model.Packages)
                 {
-                    if (item.Pakete.Status == "To do")
+                    if (item.Status == "To do")
                     {
                         <li class="list-group-item list-group-item-light">
-                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
                         </li>
                     }
                 }
@@ -87,12 +75,12 @@
         <div class="card-body">
             <h4 class="card-title">In Bearbeitung</h4>
             <ul class="list-group list-group-flush">
-                @foreach (var item in Model)
+                @foreach (var item in Model.Packages)
                 {
-                    if (item.Pakete.Status == "In Bearbeitung")
+                    if (item.Status == "In Bearbeitung")
                     {
                         <li class="list-group-item list-group-item-light">
-                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
                         </li>
                     }
                 }
@@ -103,12 +91,12 @@
         <div class="card-body">
             <h4 class="card-title">Fertig</h4>
             <ul class="list-group list-group-flush">
-                @foreach (var item in Model)
+                @foreach (var item in Model.Packages)
                 {
-                    if (item.Pakete.Status == "Fertig")
+                    if (item.Status == "Fertig")
                     {
                         <li class="list-group-item list-group-item-light">
-                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a>
                         </li>
                     }
                 }
@@ -119,6 +107,7 @@
 <p>
     <h2>Mitglieder</h2>
 </p>
+<a asp-action="AddUser" asp-route-id="@Model.Project.ProjekteId" asp-controller="Projekte" >Nutzer hinzufügen</a>
 <table class="table">
     <thead>
         <tr>
@@ -131,17 +120,17 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.ProjectUsers)
         {
             <tr>
                 <td>
-                    
+                    @item.UserName
                 </td>
                 <td>
-                    
                 </td>
             </tr>
         }
     </tbody>
+</table>
 
-
+<a class="btn btn-primary" asp-action="Index">Zurück zur Projektübersicht</a>
