--- a/IvA/wwwroot/css/site.css
+++ b/IvA/wwwroot/css/site.css
@@ -306,3 +306,13 @@ body {
     float: left;
     padding: 5px 25px;
 }
+.noty{
+    display:inline;
+    background: red;
+    color: #ffffff;
+    padding: 0px 4px;
+    margin-top: 5px;
+    border-radius:50%;
+    font-size:10px;
+    float:right;
+}
