Mitglieder aus Formularen rausgenommen / Einträge in Tabelle ProjekteArbeitsPaketeViewModel werden mit Arbeitspaketen gelöscht

--- a/IvA/Views/Projekte/Edit.cshtml
+++ b/IvA/Views/Projekte/Edit.cshtml
@@ -36,8 +36,8 @@
             </div>
 
             <div class="form-group" type="hidden">
-                <label asp-for="Mitglieder" class="control-label"></label>
-                <input asp-for="Mitglieder" class="form-control" />
+                
+                <input asp-for="Mitglieder" type="hidden"class="form-control" />
                 <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
 
