--- a/IvA/Views/Projekte/PaketAnpassen.cshtml
+++ b/IvA/Views/Projekte/PaketAnpassen.cshtml
@@ -30,8 +30,8 @@
                 <span asp-validation-for="Beschreibung" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mitglieder" class="control-label"></label>
-                <input asp-for="Mitglieder" class="form-control" />
+               
+                <input asp-for="Mitglieder" type ="hidden" class="form-control" />
                 <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
             <div class="form-group">
