--- a/IvA/Views/Projekte/Create.cshtml
+++ b/IvA/Views/Projekte/Create.cshtml
@@ -18,11 +18,8 @@
                 <input asp-for="Projektname" class="form-control" />
                 <span asp-validation-for="Projektname" class="text-danger"></span>
             </div>          
-            <div class="form-group">
-                <label asp-for="Mitglieder" class="control-label"></label>
-                <select asp-for="Mitglieder" disabled=""class="form-control">
-                    <option value=""></option>
-                </select>
+            <div class="form-group">          
+                <input asp-for="Mitglieder" type="hidden" disabled=""class="form-control"></input>
                 <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -32,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Deadline" class="control-label"></label>
-                <input asp-for="Deadline" class="form-control" />
+                <input asp-for="Deadline" value="@DateTime.Now" class="form-control" />
                 <span asp-validation-for="Deadline" class="text-danger"></span>
             </div>
             <div class="form-group">            
