--- a/IvA/Views/Projekte/PaketErstellen.cshtml
+++ b/IvA/Views/Projekte/PaketErstellen.cshtml
@@ -20,18 +20,17 @@
                 <span asp-validation-for="Beschreibung" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mitglieder" class="control-label"></label>
-                <input asp-for="Mitglieder" class="form-control" />
+                
+                <input asp-for="Mitglieder" type ="hidden" class="form-control" />
                 <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Frist" class="control-label"></label>
-                <input asp-for="Frist" class="form-control" />
+                <input asp-for="Frist" value="@DateTime.Now" class="form-control" />
                 <span asp-validation-for="Frist" class="text-danger"></span>
             </div>
-            <div class="form-group">
-              <label asp-for="Status" class="control-label"></label>
-              <input asp-for="Status" class="form-control" placeholder="To do" disabled="" />
+            <div class="form-group">          
+              <input asp-for="Status" type="hidden"class="form-control" placeholder="To do" disabled="" />
               <span asp-validation-for="Status" class="text-danger"></span>
              </div>
             <div class="form-group">
