--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -19,18 +19,7 @@
     {
         @if (item.Deadline <= DateTime.Now) 
         {
-        <div style=          
-        "background-color: crimson; 
-        position: relative; 
-        display: -ms-flexbox; 
-        display: flex; 
-        -ms-flex-direction: column;
-        flex-direction: column;
-        min-width: 0;
-        word-wrap: break-word;
-        background-clip: border-box;
-        border: 1px solid rgba(0, 0, 0, 0.125);
-        border-radius: 0.25rem;">
+        <div class="card bg-danger">
             <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.ProjekteId">@item.Projektname</a></div>
             <div class="card-body text-center">
                 <p class="card-text">@item.Beschreibung</p>
