--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="shortcut icon" href="~/favicon.ico" />
 </head>
-<body> 
+<body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-red border-bottom box-shadow mb-3">
             <div class="container">
@@ -54,96 +54,92 @@
             </div>
         </nav>
     </header>
-    <div class="container"> 
-        <main role="main" class="pb-3">          
+    <div class="container">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    <div style="margin-top:100px">
-        <div class="container">
+    @if (this.User.Identity.IsAuthenticated)
+    {
+        <div style="margin-top:100px">
+            <div class="container">
 
-            <div class="row">
-                <div class="col-2" style="color:white">Message</div>
-                <div class="col-4"><input type="text" id="txtmessage" /></div>
-            </div>
-            <div class="row"> </div>
-            <div class="row">
-                <div class="col-6">
-                    <input type="button" id="sendBtn" value="Send" />
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <hr />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6" style="color:white">
-                <ul id="ulmessages"></ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="box box-solid box-primary">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">Online Users <span id='UserCount'></span></h3>
-                    </div>
-                    <div class="box-footer box-comments" id="divusers">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="systemChat align-baseline transparente" id="user_head">
-            <div class="columna" id="user_content">
-                <div class="row" id="xxx">
-                    <div id="user_title_bar">
-                        <span class="col-sm-9 text-primary"><strong>Online Users</strong></span>
-                        <div id="user_min_button"><i class="fa fa-plus-square"></i></div>
-                        <div id="min_user" class="close_user"><strong>X</strong></div>
-                    </div>
-                    <div class="userlog" id="list_clients">
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="columna" id="message_content">
                 <div class="row">
-                    <div id="chat_title_bar">
-                        <span class="col-sm-9 text-primary" id="textziel"><strong><small>CHAT</small></strong></span>
-                        <div id="chat_min_button"><i class="fa fa-plus-square"></i></div>
-                        <div id="min_message" class="close_message"><strong>x</strong></div>
+                    <div class="col-2" style="color:white">Message</div>
+                    <div class="col-4"><input type="text" id="txtmessage" /></div>
+                </div>
+                <div class="row"> </div>
+                <div class="row">
+                    <div class="col-6">
+                        <input type="button" id="sendBtn" value="Send" />
                     </div>
-                    <div class="messages">
-                    </div>
-                    <div class="input-group mb-3">
-                        <input id="messageInputChat" type="text" placeholder="Schreibe etw">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button" id="sendButtonMessage">Enviar</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <hr />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6" style="color:white">
+                    <ul id="ulmessages"></ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="box box-solid box-primary">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">Online Users <span id='UserCount'></span></h3>
+                        </div>
+                        <div class="box-footer box-comments" id="divusers">
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="systemChat align-baseline transparente" id="user_head">
+                <div class="columna" id="user_content">
+                    <div class="row" id="xxx">
+                        <div id="user_title_bar">
+                            <span class="col-sm-9 text-primary"><strong>Online Users</strong></span>
+                            <div id="user_min_button"><i class="fa fa-plus-square"></i></div>
+                            <div id="min_user" class="close_user"><strong>X</strong></div>
+                        </div>
+                        <div class="userlog" id="list_clients">
+                        </div>
+                    </div>
+                </div>
+                <div class="columna" id="message_content">
+                    <div class="row">
+                        <div id="chat_title_bar">
+                            <span class="col-sm-9 text-primary" id="textziel"><strong><small>CHAT</small></strong></span>
+                            <div id="chat_min_button"><i class="fa fa-plus-square"></i></div>
+                            <div id="min_message" class="close_message"><strong>x</strong></div>
+                        </div>
+                        <div class="messages">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input id="messageInputChat" type="text" placeholder="Schreibe etwas">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="button" id="sendButtonMessage">Senden</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+            <script src="~/js/chat.js"></script>
         </div>
+        }
 
-
-
-
-        <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
-        <script src="~/js/chat.js"></script>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Collab - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
-</body>
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2020 - Collab - <a asp-area="" asp-controller="Home" asp-action="Impressum">Impressum</a>
+            </div>
+        </footer>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        @RenderSection("Scripts", required: false)
+    </body>
 </html>
