--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -2,54 +2,54 @@
 
 @{ ViewData["Title"] = "Projektdetails"; }
 
-<h1>Übersicht über die Projektdetails</h1>
+<h1>Projekt: @Model.Project.Projektname</h1>
 
 <div>
-    W
-    <h4>Projekte</h4>
+    <h4>Übersicht über die Projektdetails</h4>
     <dl class="row">
-        <dt class="col-sm-2">
-            Name
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Project.Projektname
-        </dd>
         <dt class="col-sm-2">
             Projektowner
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-4">
             @Model.Project.Projektersteller
         </dd>
         <dt class="col-sm-2">
             Erstellt am
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-4">
             @Model.Project.ErstelltAm
-        </dd>
-        <dt class="col-sm-2">
-            Beschreibung
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Project.Beschreibung
-        </dd>
-        <dt class="col-sm-2">
-            Deadline
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Project.Deadline
         </dd>
         <dt class="col-sm-2">
             Status
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-4">
             @Model.Project.Status
         </dd>
+        <dt class="col-sm-2">
+            Deadline
+        </dt>
+        <dd class="col-sm-4">
+            @Model.Project.Deadline
+        </dd>
+        <dt class="col-sm-2">
+            Beschreibung
+        </dt>
+        <dd class="col-sm-4">
+            @Model.Project.Beschreibung
+        </dd>
+
     </dl>
 
-    <div style="margin-bottom:50px">
+    <div style="margin-bottom:20px; margin-top:20px">
         <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Project.ProjekteId">Anpassen</a>
         <a class="btn btn-danger" asp-action="Delete" asp-route-id="@Model.Project.ProjekteId">Projekt löschen</a>
         <a class="btn btn-primary" asp-action="PaketErstellen" asp-route-id="@Model.Project.ProjekteId">Arbeitspaket erstellen</a>
+    </div>
+
+    <div class="progress" style="margin-bottom:20px">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: @Model.ProjectProgress[0]" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar bg-warning" role="progressbar" style="width: @Model.ProjectProgress[1]" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar bg-info" role="progressbar" style="width: @Model.ProjectProgress[2]" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 
 </div>
