--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -67,9 +67,9 @@
                 <div class="columna" id="user_content">
                     <div class="row" id="xxx">
                         <div id="user_title_bar">
-                            <span class="col-sm-9 text-primary"><strong>Online Users</strong></span>
+                            <span class="col-sm-9 text-primary"><strong id="farbe">Online Users</strong></span>
                             <div id="user_min_button"><i class="fa fa-plus-square"></i></div>
-                            <div id="min_user" class="close_user"><strong>X</strong></div>
+                            <div id="min_user" class="close_user2"><strong>Open</strong></div>
                         </div>
                         <div class="userlog" id="list_clients">
                         </div>
@@ -82,7 +82,7 @@
                             <div id="chat_min_button"><i class="fa fa-plus-square"></i></div>
                             <div id="min_message" class="close_message"><strong>x</strong></div>
                         </div>
-                        <div class="messages">
+                        <div class="messages" id="scrolldown">
                         </div>
                         <div class="input-group mb-3">
                             <input id="messageInputChat" type="text" placeholder="Schreibe etwas">
