--- a/IvA/wwwroot/css/site.css
+++ b/IvA/wwwroot/css/site.css
@@ -173,7 +173,7 @@ body {
     background: #ffffff;
     height: 50%;
     float: right;
-    position: absolute;
+    position: fixed;
     bottom: 2px;    
     right: 1px;
     clear: right;
@@ -296,9 +296,12 @@ body {
     cursor: pointer;
 }
 
+#min_user{
+    font-weight:bold !important;
+}
 .user_min {
     margin-right: 1px;
-    background: #ffffff;
+    background: #ffffff;    
     height: 20%;
     width: 50px;
     border-radius: 10px;
@@ -306,13 +309,27 @@ body {
     float: left;
     padding: 5px 25px;
 }
-.noty{
-    display:inline;
+
+#message_content{
+    display:none;
+   
+}
+
+#list_clients {
+    display: none;
+    
+}
+
+#user_head{
+    height:auto;
+}
+.noty {
+    display: inline;
     background: red;
     color: #ffffff;
     padding: 0px 4px;
     margin-top: 5px;
-    border-radius:50%;
-    font-size:10px;
-    float:right;
+    border-radius: 50%;
+    font-size: 10px;
+    float: right;
 }
