--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -128,14 +128,24 @@
                 <td>
                     @switch (role)
                     {
-                        case "Owner":<h3>@item.UserName <span class="badge badge-warning">@role</span></h3> break;
-                        case "Moderator": <h3>@item.UserName <span class="badge badge-primary">@role</span></h3>break;
-                        case "Nutzer": <h3>@item.UserName <span class="badge badge-secondary">@role</span></h3>break;
+                        case "Owner":<h4>@item.UserName <span class="badge badge-warning">@role</span></h4> break;
+                        case "Moderator": <h4>@item.UserName <span class="badge badge-primary">@role</span></h4>break;
+                        case "Nutzer": <h4>@item.UserName <span class="badge badge-secondary">@role</span></h4>break;
                     }
                 </td>
                 <td>
                     @if (item.UserName != Model.Project.Projektersteller)
                     {
+                        <a class="btn btn-primary" asp-action="ChangeProjectRole" asp-route-id="@Model.Project.ProjekteId" asp-route-newOwner="@item.Id" asp-route-role="">Owner ernennen</a>
+                        if (role == "Moderator")
+                        {
+                            <a class="btn btn-primary" asp-action="ChangeProjectRole" asp-route-id="@Model.Project.ProjekteId" asp-route-name="@item.Id" asp-route-role="Nutzer">Moderator wegnehmen</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary" asp-action="ChangeProjectRole" asp-route-id="@Model.Project.ProjekteId" asp-route-name="@item.Id" asp-route-role="Moderator">Moderator ernennen</a>
+                        }
+
                         <a class="btn btn-primary" asp-action="DeleteUserFromProject" asp-route-id="@Model.Project.ProjekteId" asp-route-name="@item.UserName">Nutzer entfernen</a>
                     }
                 </td>
