--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -30,6 +30,18 @@
             @Html.DisplayFor(model => model.Package.Beschreibung)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Package.Zeitbudget)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Package.Zeitbudget) Stunden
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Package.VerbrauchteZeit)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Package.VerbrauchteZeit) Stunden
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Package.Frist)
         </dt>
         <dd class="col-sm-10">
@@ -46,6 +58,7 @@
 
 <div>
     <a class="btn btn-primary" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Bearbeiten</a> |
+    <a class="btn btn-primary" asp-action="PaketZeit" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Zeit eintragen</a> |
     <a class="btn btn-primary" asp-action="PackageUserList" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Mitglieder</a> |
     <a class="btn btn-primary" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a> |
     <a class="btn btn-primary" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Arbeitspaket löschen</a>
