--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -10,7 +10,7 @@
 <div>
 
     <hr />
-    <dl class="row">
+    <dl class="row" style="padding-bottom:15px">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Package.PaketName)
         </dt>
@@ -55,16 +55,33 @@
         </dd>
     </dl>
 </div>
-
-<div>
-    <a class="btn btn-primary" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Bearbeiten</a> |
-    <a class="btn btn-primary" asp-action="PaketZeit" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Zeit eintragen</a> |
-    <a class="btn btn-primary" asp-action="PackageUserList" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Mitglieder</a> |
-    <a class="btn btn-primary" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a> |
-    <a class="btn btn-primary" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Arbeitspaket löschen</a>
+<div style="margin-bottom:50px ; color:white" align="left">
+    <svg style="margin-right:25px" width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-alarm" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M8 15A6 6 0 1 0 8 3a6 6 0 0 0 0 12zm0 1A7 7 0 1 0 8 2a7 7 0 0 0 0 14z" />
+        <path fill-rule="evenodd" d="M8 4.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.053.224l-1.5 3a.5.5 0 1 1-.894-.448L7.5 8.882V5a.5.5 0 0 1 .5-.5z" />
+        <path d="M.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z" />
+        <path fill-rule="evenodd" d="M11.646 14.146a.5.5 0 0 1 .708 0l1 1a.5.5 0 0 1-.708.708l-1-1a.5.5 0 0 1 0-.708zm-7.292 0a.5.5 0 0 0-.708 0l-1 1a.5.5 0 0 0 .708.708l1-1a.5.5 0 0 0 0-.708zM5.5.5A.5.5 0 0 1 6 0h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z" />
+        <path d="M7 1h2v2H7V1z" />
+    </svg>
+    @if (Model.Package.Zeitbudget - Model.Package.VerbrauchteZeit > 0)
+    {
+    <span class="btn btn-info">Verfügbare Zeit: @(Model.Package.Zeitbudget - Model.Package.VerbrauchteZeit) Stunden</span> 
+    }
+    else
+    {
+    <span class="btn btn-danger">Die verfügbare Arbeitszeit für dieses Paket ist aufgebraucht!</span>
+    }
 </div>
 
-<h2>Zugewiesene Mitarbeiter zum Arbeitspaket</h2>
+<div>
+    <a class="btn btn-primary" style="margin-right:10px" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Bearbeiten</a> 
+    <a class="btn btn-primary" style="margin-right:10px" asp-action="PaketZeit" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Zeit eintragen</a> 
+    <a class="btn btn-primary" style="margin-right:10px" asp-action="PackageUserList" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Mitglieder</a> 
+    <a class="btn btn-primary" style="margin-right:10px" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a> 
+    <a class="btn btn-primary" style="margin-right:10px" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.Package.ArbeitsPaketId">Arbeitspaket löschen</a>
+</div>
+
+<h2 style="margin-top:75px">Zugewiesene Mitarbeiter zum Arbeitspaket</h2>
 
 <table class="table">
     <thead>
