Korrektur Bootstrap Version

--- a/IvA/Views/Projekte/PaketZeit.cshtml
+++ b/IvA/Views/Projekte/PaketZeit.cshtml
@@ -4,6 +4,8 @@
 
 <h1>Tragen sie hier die eingesetzte Zeit für das Arbeitspaket ein</h1>
 <br />
+<h6 style="color:white">(Wenn sie eine Zeitkorrektur vornehmen möchten, geben sie bitte die Stundenanzahl mit negativem Vorzeichen ein)</h6>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
