--- a/IvA/Views/Dashboard/Index.cshtml
+++ b/IvA/Views/Dashboard/Index.cshtml
@@ -6,13 +6,13 @@
 
 <h1>Mein Dashboard</h1>
 <h2>Demnächst zu erledigen<h2>
-<div class="card-deck">
+<div class="card-columns">
     @foreach (var item in Model)
     {
         DateTime now = DateTime.Now;
         @if (item.Frist <= now.AddDays(3)) 
         {
-        <div class="card bg-secondary">
+        <div class="card bg-secondary" style="width: 15rem">
             <div class="card-header text-center" style="font-size: 20px;"><a asp-action="Projekte" asp-route-id="@item.ArbeitsPaketId">@item.PaketName</a></div>
             <div class="card-body text-center">
                 <p class ="card-text" style="font-size: 15px;">@item.Beschreibung</p>
