--- a/IvA/Views/Projekte/AddUser.cshtml
+++ b/IvA/Views/Projekte/AddUser.cshtml
@@ -16,7 +16,7 @@
                 <span asp-validation-for="name" class="text-danger"></span>
             </div>
             <div class="form-group" type="hidden">
-                <label asp-for="id" type="hidden" class="control-label"></label>
+                
                 <input asp-for="id" value="@(ViewContext.RouteData.Values["id"])" type="hidden" class="form-control"/>
                 <span asp-validation-for="id" type="hidden" class="text-danger"></span>
             </div>
@@ -28,6 +28,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Abbrechen</a>
+    <a asp-action="Index" class="btn btn-dark">Abbrechen</a>
+    
 </div>
 
