--- a/IvA/Views/Projekte/Index.cshtml
+++ b/IvA/Views/Projekte/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Projektübersicht";
 }
-<h2 align="center" class="display-4">Projektdashboard</h2>
+<h2 align="center" class="display-4">Projektübersicht</h2>
 <h2 style="padding-top:25px">
     Behalten sie die Übersicht über ihre Projekte. <br />
     Erstellen und Verwalten sie flexibel Projekte und Arbeitspakete.
@@ -13,39 +13,44 @@
     <a class="btn btn-primary" asp-action="Create">Neues Projekt erstellen</a>
 </p>
 
-<div class="card-columns">
+<div class="card-columns" style="margin-top:15px"> 
 
     @foreach (var item in Model)
     {
         @if (item.Deadline <= DateTime.Now) 
         {
         <div class="card bg-danger">
-            <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.ProjekteId">@item.Projektname</a></div>
+            <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.ProjekteId" class="btn btn-dark">@item.Projektname</a></div>
             <div class="card-body text-center">
                 <p class="card-text">@item.Beschreibung</p>
             </div>
+            <!--
             <div class="card-footer">
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                        </div>
                     </div>
-                </div>
             </div>
+             -->
         </div>
         }
-        else {
+        else 
+        {
         <div class="card bg-secondary">
-            <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.ProjekteId">@item.Projektname</a></div>
+            <div class="card-header text-center"><a asp-action="Details" asp-route-id="@item.ProjekteId" class="btn btn-dark">@item.Projektname</a></div>
             <div class="card-body text-center">
                 <p class="card-text">@item.Beschreibung</p>
             </div>
+            <!--
             <div class="card-footer">
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                        </div>
                     </div>
-                </div>
             </div>
+             -->
         </div>
-        };
+        }
     }
 </div>
 
